--- a/card.html
+++ b/card.html
@@ -265,12 +265,56 @@ body {
 
 </div>
 
+<audio id="openSound" src="open.mp3"></audio>
+<audio id="paperSound" src="paper.mp3"></audio>
+<audio id="closeSound" src="close.mp3"></audio>
+<audio id="bgMusic" src="music.mp3" loop></audio>
+<audio id="heartSound" src="heart.mp3"></audio>
+
 <script>
 const envelope = document.getElementById("envelope");
+
+const openSound = document.getElementById("openSound");
+const paperSound = document.getElementById("paperSound");
+const closeSound = document.getElementById("closeSound");
+const bgMusic = document.getElementById("bgMusic");
+const heartSound = document.getElementById("heartSound");
+
 let stage = 0;
+
+/* MUSIC FADE */
+function fadeInMusic() {
+  bgMusic.volume = 0;
+  bgMusic.play();
+  let v = 0;
+  const i = setInterval(() => {
+    if (v < 0.6) {
+      v += 0.02;
+      bgMusic.volume = v;
+    } else clearInterval(i);
+  }, 100);
+}
+
+function fadeOutMusic() {
+  let v = bgMusic.volume;
+  const i = setInterval(() => {
+    if (v > 0.02) {
+      v -= 0.02;
+      bgMusic.volume = v;
+    } else {
+      bgMusic.pause();
+      bgMusic.currentTime = 0;
+      clearInterval(i);
+    }
+  }, 100);
+}
 
 envelope.addEventListener("click", (e) => {
    if (e.target.classList.contains("close")) {
+   
+    closeSound.currentTime = 0;
+  closeSound.play();
+  fadeOutMusic();
 
     // STEP 1 — letter slides down from open
     envelope.classList.remove("openLetter");
@@ -302,11 +346,19 @@ envelope.addEventListener("click", (e) => {
   }
 
   if (stage === 0) {
+  openSound.currentTime = 0;
+  openSound.play();
+
+  fadeInMusic();
+  
     envelope.classList.add("open", "peek");
     releaseHearts();
     stage = 1;
 
   } else if (stage === 1) {
+   paperSound.currentTime = 0;
+  paperSound.play();
+  
     envelope.classList.add("openLetter");
     stage = 2;
   }
@@ -315,6 +367,10 @@ envelope.addEventListener("click", (e) => {
 });
 
 function releaseHearts() {
+heartSound.currentTime = 0;
+heartSound.volume = 0.4;
+heartSound.play();
+
    for (let i = 0; i < 10; i++) {
     const heart = document.createElement("div");
     heart.className = "floating-heart";
